--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="shortcut icon" href="/images/4.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2&family=Manrope:wght@800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar">
+        <h2>Sih<span class="dev-name">a</span>n</h2>
+        <ul>
+          <li><a href="home">Home</a></li>
+          <li><a href="portflio">Portfolio</a></li>
+          <li><a href="blog">Blog</a></li>
+          <li><button  class="btn-primary">Hire Me</button></li>
+        </ul>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
