header section completed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
-    <link rel="shortcut icon" href="/images/4.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/4.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,9 +21,30 @@
           <li><a href="home">Home</a></li>
           <li><a href="portflio">Portfolio</a></li>
           <li><a href="blog">Blog</a></li>
-          <li><button  class="btn-primary">Hire Me</button></li>
+          <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <section class="hed-section">
+        <div>
+          <div>
+            <h2>Hi, I am</h2>
+            <h1>MD.Sihan</h1>
+            <p>
+              Shot what able cold new see hold.Friendly as an betrayed formerly
+              he.
+              <br />
+              Morning because as to society behaved moments.
+            </p>
+          </div>
+          <div>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-contact">Contact</button>
+          </div>
+        </div>
+        <div>
+          <img  class="hed-img" width=600px" src="/images/Copy of Mathematical Report Logo .png" alt="">
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
