developer bg-pic added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="about-me">
+
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
