about me section completed

--- a/index.html
+++ b/index.html
@@ -42,13 +42,41 @@
           </div>
         </div>
         <div>
-          <img  class="hed-img" width=600px" src="/images/Copy of Mathematical Report Logo .png" alt="">
+          <img class="hed-img" width=600px" src="/images/Copy of Mathematical
+          Report Logo .png" alt="">
         </div>
       </section>
     </header>
     <main>
       <section class="about-me">
-
+        <h3>About Me</h3>
+        <p style="text-align: center">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and <br />
+          slick websites that provide real value to the end user. Thousands of
+          clients have procured <br />
+          exceptional resulfs while working with me. Delivering work within time
+          and budget which meets <br />
+          clients requirements in our mata.
+        </p>
+        <div class="my-info">
+          <p>
+            Name: <br />
+            <span class="my-info-span">MD.Sihan</span>
+          </p>
+          <p>
+            Email: <br />
+            <span class="my-info-span">mohammadsihan289@gmail.com</span>
+          </p>
+          <p>
+            Date of birth: <br />
+            <span class="my-info-span">09th December 2007</span>
+          </p>
+          <p>
+            From: <br />
+            <span class="my-info-span">Dhaka, Bangladesh</span>
+          </p>
+        </div>
       </section>
     </main>
     <footer></footer>
