bg image setteled

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
           </div>
         </div>
         <div>
-          <img class="hed-img" width=600px" src="/images/Copy of Mathematical
-          Report Logo .png" alt="">
+          <img class="hed-img" width=410px" src="/images/hardy.png" alt="">
         </div>
       </section>
     </header>
