--- a/index.html
+++ b/index.html
@@ -77,6 +77,70 @@
           </p>
         </div>
       </section>
+      <section class="whatIdo">
+        <h3>What I Do</h3>
+        <p style="text-align: center">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick <br />
+          overview of my main technical skill sets and technologies i use. Want
+          to find out more about my experience? <br />
+          Check out my online resume and project portfolio.
+        </p>
+        <div class="whtIdo-info">
+          <div>
+            <img src="/images/icons/js.png" alt="Js logo" />
+            <h3>Vanilla JavaScript</h3>
+            <p>
+              List skill/technologies <br />
+              here. You can change the <br />
+              icon above to any of the <br />
+              1500+ FontAwesome 5 <br />
+              free icons available. <br />
+              Aenean commodo ligula <br />
+              eget dolor.
+            </p>
+          </div>
+          <div>
+            <img src="/images/icons/react.png" alt="React logo" />
+            <h3>React</h3>
+            <p>
+              List skill/technologies <br />
+              here. You can change the <br />
+              icon above to any of the <br />
+              1500+ FontAwesome 5 <br />
+              free icons available. <br />
+              Aenean commodo ligula <br />
+              eget dolor.
+            </p>
+          </div>
+          <div>
+            <img src="/images/icons/nodejs.png" alt="Nodejs logo" />
+            <h3>Node.JS</h3>
+            <p>
+              List skill/technologies <br />
+              here. You can change the <br />
+              icon above to any of the <br />
+              1500+ FontAwesome 5 <br />
+              free icons available. <br />
+              Aenean commodo ligula <br />
+              eget dolor.
+            </p>
+          </div>
+          <div>
+            <img src="/images/icons/mongo.png" alt="" />
+            <h3>MongoDB</h3>
+            <p>
+              List skill/technologies <br />
+              here. You can change the <br />
+              icon above to any of the <br />
+              1500+ FontAwesome 5 <br />
+              free icons available. <br />
+              Aenean commodo ligula <br />
+              eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
