--- a/index.html
+++ b/index.html
@@ -141,6 +141,84 @@
           </div>
         </div>
       </section>
+      <section class="resume">
+        <h3>A Summary Of My Resume</h3>
+        <div class="my-resume">
+          <div>
+            <div>
+              <h3>My Education</h3>
+              <div class="resume-edu">
+                <h3>Masters in Computer Engineering</h3>
+                <span>Harvard University / 2015 - 2017</span>
+                <p>
+                  List skill/technologies here. You can change the icon above
+                  <br />
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  <br />
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <div class="resume-edu">
+                <h3>Masters in Computer Engineering</h3>
+                <span>Harvard University / 2015 - 2017</span>
+                <p>
+                  List skill/technologies here. You can change the icon above
+                  <br />
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  <br />
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <div class="resume-edu">
+                <h3>Masters in Computer Engineering</h3>
+                <span>Harvard University / 2015 - 2017</span>
+                <p>
+                  List skill/technologies here. You can change the icon above
+                  <br />
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  <br />
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+          </div>
+          <div>
+            <div class="resume-edu">
+              <h3>My Experience</h3>
+              <h3>Sr. Font End Developer</h3>
+              <span>Apple Inc / 2020 - Current</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="resume-edu">
+              <h3>Sr. Font End Developer</h3>
+              <span>Apple Inc / 2020 - Current</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="resume-edu">
+              <h3>Sr. Font End Developer</h3>
+              <span>Apple Inc / 2020 - Current</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
