--- a/index.html
+++ b/index.html
@@ -145,41 +145,43 @@
         <h3>A Summary Of My Resume</h3>
         <div class="my-resume">
           <div>
-            <div>
-              <h3>My Education</h3>
-              <div class="resume-edu">
-                <h3>Masters in Computer Engineering</h3>
-                <span>Harvard University / 2015 - 2017</span>
-                <p>
-                  List skill/technologies here. You can change the icon above
-                  <br />
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  <br />
-                  commodo ligula eget dolor.
-                </p>
-              </div>
-              <div class="resume-edu">
-                <h3>Masters in Computer Engineering</h3>
-                <span>Harvard University / 2015 - 2017</span>
-                <p>
-                  List skill/technologies here. You can change the icon above
-                  <br />
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  <br />
-                  commodo ligula eget dolor.
-                </p>
-              </div>
-              <div class="resume-edu">
-                <h3>Masters in Computer Engineering</h3>
-                <span>Harvard University / 2015 - 2017</span>
-                <p>
-                  List skill/technologies here. You can change the icon above
-                  <br />
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  <br />
-                  commodo ligula eget dolor.
-                </p>
-              </div>
+            <h3>My Education</h3>
+            <div class="resume-edu">
+              <h3>Masters in Computer Engineering</h3>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-edu">
+              <h3>Masters in Computer Engineering</h3>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-edu">
+              <h3>Masters in Computer Engineering</h3>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above
+                <br />
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                <br />
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
           </div>
           <div>
             <div class="resume-edu">
@@ -193,10 +195,11 @@
                 <br />
                 commodo ligula eget dolor.
               </p>
+              <hr />
             </div>
             <div class="resume-edu">
-              <h3>Sr. Font End Developer</h3>
-              <span>Apple Inc / 2020 - Current</span>
+              <h3>Jr. Font End Developer</h3>
+              <span>Dribbble Inc / 2018 - 2022</span>
               <p>
                 List skill/technologies here. You can change the icon above
                 <br />
@@ -204,10 +207,11 @@
                 <br />
                 commodo ligula eget dolor.
               </p>
+              <hr />
             </div>
             <div class="resume-edu">
-              <h3>Sr. Font End Developer</h3>
-              <span>Apple Inc / 2020 - Current</span>
+              <h3>HTML Developer</h3>
+              <span>Adobe Inc / 2017 - 2018</span>
               <p>
                 List skill/technologies here. You can change the icon above
                 <br />
@@ -215,9 +219,11 @@
                 <br />
                 commodo ligula eget dolor.
               </p>
+              <hr />
             </div>
           </div>
         </div>
+        <button style="text-align: center; align-items: center;" class="btn-primary">Download CV</button>
       </section>
     </main>
     <footer></footer>
