footer added and website is completed

--- a/index.html
+++ b/index.html
@@ -223,9 +223,79 @@
             </div>
           </div>
         </div>
-        <button style="text-align: center; align-items: center;" class="btn-primary">Download CV</button>
+        <div style="text-align: center; align-items: center">
+          <button class="btn-primary">Download CV</button>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="connect">
+          <h3 style="font-size: 35px">Lets Connect</h3>
+          <p style="font-size: 18px">
+            Please fill out the form on this section to contact with me or call
+            between <br />
+            9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="connect-icons">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/mohammad.sihanhissain"
+              ><img src="/images/icons/facebook.png" alt=""
+            /></a>
+            <a target="_blank" href="https://github.com/MohammadSihan1"
+              ><img src="/images/icons/twitter.png" alt=""
+            /></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/gamingwithboss36/"
+              ><img src="/images/icons/insta.png" alt=""
+            /></a>
+          </div>
+        </div>
+        <div class="msg-me">
+          <h3 class="msg-me-heading">Let's Message Me</h3>
+          <input class="input-msg-me" placeholder="Your Name" type="name" />
+          <br />
+          <input
+            class="input-msg-me"
+            placeholder="Your Email"
+            type="email"
+            name="email"
+            id=""
+          />
+          <br />
+          <textarea
+            class="input-msg-me"
+            name="Message"
+            id=""
+            cols="30"
+            rows="7"
+            placeholder="Message"
+          ></textarea>
+          <br />
+          <input
+            style="margin-top: 24px"
+            class="btn-primary"
+            type="submit"
+            value="Submit"
+          />
+        </div>
+      </div>
+      <div class="footer-main">
+        <div>
+          <h4>All Rights Reserved</h4>
+          <h5>&copy; Copy Right 2024</h5>
+        </div>
+        <div>
+          <address>
+            Brought To You by <p class="address-name" href="">MD.Sihan Hossain</p> 
+            Visit me at:<br>
+            442/10, Bikrampur Garden City, Dholaipar, Kadamtoli, Dhaka<br>
+            Bangladesh
+            </address>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
